--- a/themes/cocoa/layouts/blog/single.html
+++ b/themes/cocoa/layouts/blog/single.html
@@ -19,9 +19,9 @@
                 <p><a href="/blog/">Back to posts</a></p>
             </div>
             <br>
-            <div class="disqus">
+            <!-- <div class="disqus">
                 {{ template "_internal/disqus.html" . }}
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
