--- a/themes/cocoa/layouts/partials/header.html
+++ b/themes/cocoa/layouts/partials/header.html
@@ -5,6 +5,11 @@
 
 <body lang="{{ .Site.Params.lang }}">
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MS6J5SXD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	
 <section class="header">
     <div class="container">
         <div class="content">
