--- a/themes/cocoa/layouts/partials/header.html
+++ b/themes/cocoa/layouts/partials/header.html
@@ -3,6 +3,16 @@
 
 {{ partial "head.html" . }}
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8KVXY4Z0HB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8KVXY4Z0HB');
+</script>
+
 <body lang="{{ .Site.Params.lang }}">
 	
 <section class="header">
